[gd_scene load_steps=2 format=3 uid="uid://cwf1yshncfaqu"]

[ext_resource type="Script" uid="uid://djyatx8ooqqk7" path="res://source/UI/minimap_ui/minimap_ui.gd" id="1_4jda0"]

[node name="MinimapUI" type="CanvasLayer"]
script = ExtResource("1_4jda0")

[node name="Panel" type="Panel" parent="."]
offset_left = 907.0
offset_right = 1152.0
offset_bottom = 190.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = 933.0
offset_top = 18.0
offset_right = 1133.0
offset_bottom = 168.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(200, 150)
render_target_update_mode = 4

[node name="WholeMapViewer" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="WholeMapViewer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="WholeMapViewer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1000, 600)
render_target_update_mode = 0

[connection signal="gui_input" from="SubViewportContainer" to="." method="_on_sub_viewport_container_gui_input"]
[connection signal="gui_input" from="WholeMapViewer/SubViewportContainer" to="." method="_on_sub_viewport_container_gui_input"]
